--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "https-proxy-agent": "^2.2.0",
+    "log4js": "^2.5.3",
     "request": "^2.85.0",
     "ws": "^5.0.0"
   }
