--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "https-proxy-agent": "^2.2.0",
     "log4js": "^2.5.3",
+    "mmap-io": "^1.0.0",
     "request": "^2.85.0",
     "ws": "^5.0.0"
   }
