--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "https-proxy-agent": "^2.2.0",
     "log4js": "^2.5.3",
     "mmap-io": "^1.0.0",
+    "pako": "^1.0.6",
+    "pg": "^7.4.3",
     "request": "^2.85.0",
-    "ws": "^5.0.0",
-    "pg": "^7.4.3"
+    "ws": "^5.0.0"
   }
 }
